--- a/wwwroot/css/views/home/index.css
+++ b/wwwroot/css/views/home/index.css
@@ -65,6 +65,10 @@ a:hover {
     text-decoration: none;
     color: black;
 }
+.card {
+    border: 1px solid white;
+    box-shadow: rgb(60 64 67 / 10%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px 2px;
+}
 .card-img-top{
     height:65%;
     width: 65%;
