--- a/wwwroot/css/views/home/productlist.css
+++ b/wwwroot/css/views/home/productlist.css
@@ -97,6 +97,7 @@ h6.price {
     .d-inline > a:hover{
         box-shadow: none !important;
         border-color: #be1e2d;
+        transition: 0.5s ease-in-out;
     }
     .btn-on-active {
         box-shadow: none;
@@ -105,4 +106,8 @@ h6.price {
 
 .mb-3 > div > a > img {
         vertical-align: sub;
+}
+.card {
+    border: 1px solid white;
+    box-shadow: rgb(60 64 67 / 10%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px 2px;
 }
