--- a/Areas/Admin/Views/SaleManagers/BillDetails.cshtml
+++ b/Areas/Admin/Views/SaleManagers/BillDetails.cshtml
@@ -146,6 +146,7 @@
     <div class= "container-fluid">
         <a asp-action="Accecpt" class="btn btn-outline-primary " asp-route-id="@orderid">@status</a>
         <a asp-action="ProductBill" class="btn btn-outline-danger ">Trở về</a>
+        <a asp-action="BillDel" class="btn btn-danger" asp-route-id="@orderid">Hủy</a>   
     </div>
     <!-- Required vendors -->
     <script src="~/vendor/global/global.min.js"></script>
