--- a/Areas/Admin/Views/SaleManagers/Shipping.cshtml
+++ b/Areas/Admin/Views/SaleManagers/Shipping.cshtml
@@ -26,7 +26,7 @@
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="javascript:void(0)">Quản lý bán hàng</a></li>
-                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Tất cả giao dịch</a></li>
+                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Đơn hàng đang vận chuyển</a></li>
                 </ol>
             </div>
         </div>
