--- a/Areas/Admin/Views/SaleManagers/Transaction.cshtml
+++ b/Areas/Admin/Views/SaleManagers/Transaction.cshtml
@@ -78,20 +78,36 @@
                                             color = "badge badge-success" ;
                                         }
                                         @if (item.Order.TransactStatus.Equals("shipping")) {
-                                            color = "badge badge-primary";
+                                            color = "badge badge-secondary";
+                                        }
+                                        @if (item.Order.TransactStatus.Equals("cancel")) {
+                                            color = "badge badge-danger";
+                                        }
+                                        @if(item.Order.TransactStatus.Equals("accept")){
+                                            color = "badge badge-info" ;
                                         }
 
                                         <td><span class= "@color" >@Html.DisplayFor(model => item.Order.TransactStatus)</span></td>
-                                           @{ color = "duyệt"; }
+                                           @{ string status = "Xác nhận"; color = "btn btn-outline-info"; string color_can = "btn btn-danger"; string text_can = "Hủy"; }
 
+                                         @if(item.Order.TransactStatus.Equals("accept")){
+                                                status = "vận chuyển";
+                                                color = "btn btn-outline-secondary";
+                                            } 
                                         @if(item.Order.TransactStatus.Equals("shipping")){
-                                                color = "thanh toán";
+                                                status = "thanh toán";
+                                                color = "btn btn-outline-success";
+                                            } 
+                                              @if(item.Order.TransactStatus.Equals("done")){
+                                                status = "";
+                                                 color = "";
+                                                color_can = "";
+                                                text_can = "";
                                             } 
                                           <td>
-                                             <a asp-action="Accecpt" asp-route-id="@item.OrderId" >@color</a>  |
-                                             <a asp-action="BillDetails" asp-route-id="@item.OrderId">Chi tiet</a> |    
-                                             <a asp-action="BillDel" asp-route-id="@item.OrderId">Hủy</a>   
-          
+                                             <a asp-action="Accecpt" asp-route-id="@item.OrderId" class = "@color" >@status</a>  
+                                             <a asp-action="BillDetails" asp-route-id="@item.OrderId" class = "btn btn-outline-primary">Chi tiết</a>    
+                                             <a asp-action="BillDel" asp-route-id="@item.OrderId" class = "@color_can">@text_can</a>   
                                         </td>
                                     </tr>   
                                }
