--- a/Areas/Admin/Views/_Layout.cshtml
+++ b/Areas/Admin/Views/_Layout.cshtml
@@ -219,6 +219,7 @@
                         <ul aria-expanded="false">
                             <li><a >Yêu cầu báo giá</a></li>
                             <li><a >Đơn mua hàng</a></li>
+                            <li><a asp-action= "Index" asp-area= "admin" asp-controller="Purchases">Các giao dịch</a></li>
                             <li><a asp-controller="Suppliers" asp-action="Index" asp-area="Admin">Nhà cung cấp</a></li>
                         </ul>
                     </li>
