--- a/Areas/Admin/Views/InventoryManagers/Index.cshtml
+++ b/Areas/Admin/Views/InventoryManagers/Index.cshtml
@@ -22,7 +22,7 @@
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="javascript:void(0)">Quản lý kho hàng</a></li>
                     <li class="breadcrumb-item active"><a href="javascript:void(0)">Quản lý hàng</a></li>
-                     <li class="breadcrumb-item active"><a href="javascript:void(0)">Kho vận</a></li>
+                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Kho vận</a></li>
                 </ol>
             </div>
         </div>
@@ -38,7 +38,7 @@
                             @foreach (var position in Model) {
                                 <text>inven.push(new google.maps.LatLng(@position.Latitude, @position.Longitude));</text>
                             }
-   
+
                              var mapOptions = {
                                  center: new google.maps.LatLng(@item.Latitude, @item.Longitude),
                                  zoom: 16,
@@ -63,20 +63,100 @@
                         </div>
                         <div class="card-footer">
                             <p class="card-text d-inline text-danger"> @Html.DisplayFor(modelItem => item.City)</p>
-                            <a asp-action= "InvenDetails" asp-route-id = "@item.InventoryId" class="card-link float-right btn btn-outline-primary">Chi tiết kho hàng</a>
+                            <a asp-action="InvenDetails" asp-route-id="@item.InventoryId" class="card-link float-right btn btn-outline-primary">Chi tiết kho hàng</a>
                         </div>
                     </div>
                 </div>
 
             }
+    
+            <div class="col-xl-4 col-xxl-6 col-lg-6 col-sm-6">
+                    <div class="card mb-3 container-fluid">
+                       <form asp-action="Create">
+                  
+                    @foreach (var item in Model) {
+
+                        <div class="form-group">
+                            <label class="control-label">Nhập tên kho</label>
+                            <input id="name" class="form-control" />
+                            <span asp-validation-for="@item.Name" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label">Địa chỉ</label>
+                            <input id="address" class="form-control" />
+                            <span asp-validation-for="@item.Adress" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label">Tên thành phố</label>
+                            <input id="city" class="form-control" />
+                            <span asp-validation-for="@item.City" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label">Nhập kinh tuyến</label>
+                            <input id="lat" class="form-control" />
+                            <span asp-validation-for="@item.Latitude" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label">Nhập vĩ tuyến</label>
+                            <input id="lon" class="form-control" />
+                            <span asp-validation-for="@item.Longitude" class="text-danger"></span>
+                        </div>
+
+                        break;
+                    }
+
+                       <btn class="card-link float-right btn btn-success" id = "butn"> Tạo</btn>
+
+                    <script type="text/javascript">
+                
+                        $('#butn').click(function(){
+                                   
+                        var name = $('#name').val();
+                        var adress = $('#address').val();
+                        var city = $('#city').val();
+                        var lat = $('#lat').val();
+                        var lon = $('#lon').val();
+                        var model = new Object();
+                        model.Name = name;
+                        model.Adress = adress;
+                        model.City = city;
+                        model.Latitude = lat;
+                        model.Longitude = lon;
+                        console.log(model);
+                        jQuery.ajax({
+                        type: "POST",
+                        url: "@Url.Action("Create","InventoryManagers")",
+                        dataType: "json",
+                        contentType: "application/json; charset=utf-8",
+                        data: JSON.stringify( model ),
+                            processData: true,
+                            cache: false,
+
+                            });
+                        });
+                   
+                    </script>
+                </form>    
+                    </div>
+             
+
+
+
+            </div>
         </div>
 
 
 
     </div>
 
+
     <!-- Required vendors -->
     <script src="~/vendor/global/global.min.js"></script>
     <script src="~/js/quixnav-init.js"></script>
     <script src="~/js/custom.min.js"></script>
 </body>
+@section Scripts {
+    @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
+}
